- GUI: Fixed #39: Cosmetics - Missing background for the datepicker header
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@3964 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/themes/default/css/jquery.ui.datepicker.css
+++ b/gui/themes/default/css/jquery.ui.datepicker.css
@@ -67,3 +67,23 @@
     width: 200px; /*must have*/
     height: 200px; /*must have*/
 }
+
+
+/* IMSCP start */
+.ui-datepicker {
+	background-color:#27369D; cursor:pointer
+}
+
+.ui-datepicker .ui-datepicker-prev {
+	color: rgb(255,255,255);
+}
+.ui-datepicker .ui-datepicker-next {
+	color: rgb(255,255,255);
+}
+.ui-state-default {
+	color: rgb(255,255,255);
+}
+.ui-state-default:hover {
+	 color: rgb(92,186,218);
+}
+/* IMSCP end */
